# -*- conf -*-
opam-version: "1.2"
name: "lzma"
version: "0.1"
maintainer: "Anton Kochkov <anton.kochkov@gmail.com>"
author: "Anton Kochkov <anton.kochkov@gmail.com>"
homepage: "https://github.com/XVilka/lzma-ocaml"
bug-reports: "https://github.com/XVilka/lzma-ocaml/issues"
license: "MIT"
dev-repo: "https://github.com/XVilka/lzma-ocaml.git"
build: [
	["jbuilder" "subst" "-n" name] {pinned}
	["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
	"jbuilder" {build}
	"ocaml-migrate-parsetree" {build}
	"ppx_deriving" {>= "4.2.0"}
	"core" {>= "v0.9.0"}
	"ctypes" {>= "0.13.0"}
	"ctypes-foreign"
]
depexts: [
	[["debian"] ["liblzma-dev"]]
	[["alpine"] ["liblzma-dev"]]
	[["ubuntu"] ["liblzma-dev"]]
	[["centos"] ["xz-devel"]]
	[["fedora"] ["xz-devel"]]
	[["archlinux"] ["xz"]]
	[["gentoo"] ["xz-utils"]]
	[["osx" "homebrew"] ["xz"]]
]
available: [ocaml-version >= "4.02.3"]
